alignment fixes

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,7 +2,7 @@
 .contactDiv{
   height: 80vh;
   max-width: 100%;
-  background: #014b97;
+  background: #000;
   @include mobile{
     height: 90vh;
   }
@@ -15,6 +15,7 @@
     gap: 50px;
 
     @include mobile{
+      margin-top: -80px;
         width: 100%;
         padding: 10px;
         flex-direction: column;
@@ -30,7 +31,7 @@
            gap: 10px;
            text-align: center;
            align-items: center;
-           margin-top: 180px;
+           margin-top: 130px;
           }
           .item {
             display: flex;
@@ -70,7 +71,7 @@
         
 
         @include mobile{
-            margin-top: -90px;
+            margin-top: -70px;
             padding: 50px;
             width: 100%;
           }
